--- a/templates/artist-profile.html
+++ b/templates/artist-profile.html
@@ -17,6 +17,7 @@
    
     <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/grid.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/profile.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/artist.css" rel="stylesheet">
 
     <title>audiosearch</title>
