--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -47,7 +47,7 @@
     height: 2px;
     background-color: white;
 }
-.glyphicon {
+.nav-glyphicon {
     font-size: 30px;
     padding-right: 10px
 }
