--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -2,8 +2,8 @@
     height: 200px;
     min-height: 200px;
     width: 1000px;
-    /*display: inline;*/
     margin: 0 auto;
+    padding: 10px;
 }
 
 .content {
@@ -16,7 +16,6 @@
     text-align: center;
 }
 
-
 .song-index {
     width: 50px;
     height: 45px;
@@ -26,6 +25,8 @@
     width: 600px;
 }
 
-
+.title-text {
+    font-size:30px;
+}
 
 
