--- a/static/css/song.css
+++ b/static/css/song.css
@@ -1,5 +1,13 @@
-
-
+.song-content-header {
+    height: 115px;
+    width: 1000px;
+    margin: 0 auto;
+    padding: 15px;
+}
+.song-content-title {
+    width: 1000px;
+    height: 20px;
+}
 .title-info {
     width:100%;
 }
@@ -10,23 +18,39 @@
 #duration {
     display: inline-block;
     float:left;
+    margin-left: 25px;
 }
 #rank {
     display: inline-block;
-    float:right;
+    float:left;
 }
 #hotttnesss {
     display: inline-block;
-    float:right;
+    float:left;
 }
 #artist-name {
     /*width: 100%;*/
+    display: inline-block;
+    float:left;
     font-size: 18px;
-    text-indent: 50px;
+    margin-left: 75px;
 }
 
 .subtitle {
     font-size: 20px;
-    margin-top: 30px;
-    margin-right: 30px;
+    margin-left: 100px;
+}
+
+.subtitle-icon {
+    font-size: 20px;
+    margin-left: 100px;
+}
+
+.custom-hr {
+    margin: 8px;
+}
+
+.small-glyph {
+    font-size: 18px;
+    padding-right: 5px;
 }
