--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,129 +1,6 @@
 html, body {
-    color: white;
-    height: 100%;
-    min-height: 100%;
-    width: 100%;
-    font-family: Helvetica, sans-serif;
-    font-size: 15px;
-    /*background-color: #215681;*/
-    background-color: #808073;
-}
-
-.container {
     /*height: 100%;*/
-    /*min-height: 100%;*/
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    /*background-color: #FEF2CD;*/
-
-    /*background-color: #215681;*/
-    text-align: center;
+    /*width: 100%;*/
+    font-family: Helvetica, sans-serif;
 }
 
-/*.wrap {
-    width: 1188px;
-    height: 100%;
-    min-height: 100%;
-    margin: 0 auto;
-}*/
-
-.row {
-    margin: 0;
-}
-
-.footer {
-    background-image: url('../img/wave-far2.svg');
-    background-color: #A7E695;
-    min-height: 95px;
-    max-height: 95px;
-}
-.reflection {
-    margin-bottom: 0px;
-    background-color: rgba(7, 95, 69, 100);
-    box-shadow: 0 -65px 140px #D1FF99;
-}
-
-/*.separator {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 15px;
-    background-color: #1C2A3B;
-}*/
-
-/*TODO: combine like elements*/
-/*TABLE*/
-/*table td, tr {
-    border: none !important;
-    text-align: left;
-}*/
-.row-even {
-    background-color: #4475AA;
-}
-.row-odd {
-    background-color: #215681;
-}
-
-
-/* TEXT */
-/*.content-title {
-    padding: 0;
-    margin: 0;
-    font-size: 43px;
-    text-shadow: 1px 1px 3px rgba(255,255,255, .5);
-    text-align: left;
-    text-indent: 30px;
-    color: white;
-}*/
-
-a {
-    color: white;
-}
-a:hover {
-    color: #BABABA;
-}
-
-.separator {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 15px;
-    background-color: #215681;
-    /*background-color: #1C2A3B;*/
-}
-
-
-/*COLOR*/
-.primec {
-    /*background-color: #215681;*/
-    background-color: #808073;
-}
-.secondc {
-    /*background-color: #1C2A3B;*/
-    background-color: #422A05;
-}
-.accentc {
-    /*background-color: #4475AA;*/
-    background-color: #808073;
-}
-
-.pagination {
-    font-size: 30px;
-}
-
-.block-link {
-    position:absolute; 
-    width:100%;
-    height:100%;
-    top:0;
-    left: 0;
-    z-index: 1;
-    background-image: url('empty.gif');
-}   
-
-#separator {
-    min-height: 1px;
-    min-width: 50px;
-    display: inline-block;
-}
