--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,7 +1,9 @@
 html, body {
     /*height: 100%;*/
-    /*width: 100%;*/
     font-family: Helvetica, sans-serif;
+    margin: 0;
+    width: 100%;
+    
 }
 
 /*
