--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -1,22 +1,23 @@
 /*
     nav bar
 */
-.nav {
+#nav {
     border-bottom: 2px solid black;
     color: white;
     display: block;
+    height: 30px;
     padding: 12px;
 }
-.nav .zone {
+#nav .zone {
     float: left;
 }
-.nav .glyphicon {
+#nav .glyphicon {
     font-size: 25px;
 }
-.nav .search {
+#nav .search {
     margin-left: 25px;
 }
-.nav .search .search-bar {
+#nav .search .search-bar {
     color: black;
     /*height: 23px;*/
     padding: 3px 6px;
@@ -28,6 +29,7 @@
     dir bar
 */
 .dir {
+    line-height: 250%;
     margin-top: 30px;
 }
 .dir .title{
