--- a/templates/similar.html
+++ b/templates/similar.html
@@ -18,7 +18,9 @@
     <link href="{{ STATIC_URL }}css/general.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/grid.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/nav.css" rel="stylesheet">
-   
+    <!-- <link href="{{ STATIC_URL }}css/profile.css" rel="stylesheet"> -->
+    <!-- <link href="{{ STATIC_URL }}css/artist.css" rel="stylesheet"> -->
+
     <title>audiosearch</title>
 </head>
 <body>
@@ -35,26 +37,51 @@
 
     <div class="debug">
         <div class="zone normal ddd">
-            <a href="" id="debug">
+            <a href="{% url 'src.views.debug' %}?q={{ name }}">
                 <span class="link"></span>debug
             </a>
         </div>
     </div>
 
+    {% if old_debug %}
     <div class="debug">
         <div class="zone normal ddd">
-            <a href="" id="clear">
-                <span class="link"></span>clear
+            <a href="{% url 'src.views.artist' name %}">
+                <span class="link"></span>normal
+            </a>
+        </div>
+
+        <div class="zone ddd">
+            <a href="{% url 'src.views.artist' name %}?debug=v">
+                <span class="link"></span>v
+            </a>
+        </div>
+
+        <div class="zone ddd">
+            <a href="{% url 'src.views.artist' name %}?debug=r">
+                <span class="link"></span>r
+            </a>
+        </div>
+
+        <div class="zone ddd">
+            <a href="{% url 'src.views.artist' name %}?debug=cr">
+                <span class="link"></span>c, r
+            </a>
+        </div>
+
+        <div class="zone ddd">
+            <a href="{% url 'src.views.artist' name %}?debug=vr">
+                <span class="link"></span>v, r
             </a>
         </div>
     </div>
-    
+    {% endif %}
 </div><!--END nav -->
 
 <!-- dir -->
 <div class="dir">
     <div class="title">
-        <a href = "{% url 'src.views.index' %}" >audiosearch</a> / music 
+        <a href = "{% url 'src.views.index' %}" >audiosearch</a> / artist / music
 
         <span id="profile.name">
             {% if profile.name %}
@@ -110,57 +137,14 @@
     </div>
     {% endif %}
 
-    {% if songs %}
-    <div id="songs" class="column bbb">
-        <div class="title">
-            Songs
-        </div>
-
-        <ol>
-        {% for song in songs.data %}
-            <li>{{ song.title }} </li>
-        {% endfor %}
-        </ol>
-
-    </div>
-    {% endif %}
-
-    {% if similar_songs %}
-    <div id="similar_songs" class="column bbb">
-        <div class="title">
-            Similar Songs
-        </div>
-
-        <ol>
-        {% for song in similar_songs.data %}
-            <li>{{ song.title }} </li>
-        {% endfor %}
-        </ol>
-
-    </div>
-    {% endif %}
-
 </div><!--END content -->
 
 
+<!-- -->
+
 <script src="{{ STATIC_URL }}js/jquery-1.11.0.js"></script>
 <script src="{{ STATIC_URL }}js/ajax.loader.js"></script>
-<script src="{{ STATIC_URL }}js/ajax.debug.js"></script>
-
-{% if debug %}
-    <script type="text/javascript">
-        $('a#debug').click( function() { 
-            debug_template(); 
-            return false; 
-        });
-
-        $('a#clear').click( function() { 
-            remove_resource("{{name}}"); 
-            return false; 
-        });
-    </script>
-{% endif %}
-
+<script src="{{ STATIC_URL }}js/artist.profile.js"></script>
 <!-- 
 {% if not profile %}
     <script type="text/javascript">
