added similar page for artists

--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -21,7 +21,7 @@ html, body {
     width: 250px;
 }
 
-.content .column .title {
+/*.content .column .title {
     font-size: 30px;
     text-align: center;
-}
+}*/
