--- a/static/css/general.css
+++ b/static/css/general.css
@@ -1,3 +1,15 @@
+.title {
+    font-size: 30px;
+}
+
+.subtitle {
+    font-size: 22px;
+}
+
+.header {
+    text-align: center;
+}
+
 .white {
     color: white;
 }
@@ -15,14 +27,17 @@
 }
 
 a {
-    color: #81A8B8;
+    color: red;
+    /*color: #81A8B8;*/
     text-decoration: none;
 }
 a:hover {
-    color: #A4BCC2;
+    color: red;
+    /*color: #A4BCC2;*/
 }
 a:visited {
-    color: #81A8B8;
+    color: red;
+    /*color: #81A8B8;*/
 }
 a:active {
     
